--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,9 @@
           rel="stylesheet"/>
 </head>
 <body>
+<nav class ="navbar fixed-top navbar-light bg-faded">
+    <div class="navbar-brand"><form class="form-inline" action="#" th:action="@{/logout}" method="post"><div th:inLine="text">Hello, [[${#httpServletRequest.remoteUser}]]&nbsp;&nbsp;</div><a href="/"><input type="submit" value="Sign Out"/></a></form></div>
+</nav>
 <h1 class="text-center">Show me the weather in:</h1>
 <div class="container mx-auto table-responsive" style="width: 400px;">
     <table class="table table-bordered table-hover">
