--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -14,28 +14,30 @@
           rel="stylesheet"/>
 </head>
 <body>
-<h1 class="text-center">Weather for XYZ</h1>
+<h1 class="text-center">Weather for: <p th:text="${query}"></p></h1>
 <div class="container mx-auto table-responsive">
     <table class="table table-bordered table-hover">
         <thead>
         <tr>
-            <th>Summary</th>
-            <th>Chance of Rain</th>
-            <th>Temperature</th>
-            <th>Apparent Temperature</th>
-            <th>Humidity</th>
+            <th>Lat</th>
+            <th>Lng</th>
+            <th>Address</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Clear</td>
-            <td>0%</td>
-            <td>95.69</td>
-            <td>98.7</td>
-            <td>37%</td>
+        <tr th:each="result : ${geoCodingResponse.getResults()}">
+            <td th:text="${result.getGeometry().getLocation().getLat()}"></td>
+            <td th:text="${result.getGeometry().getLocation().getLng()}"></td>
+            <td th:text="${result.getFormatted_address()}"></td>
         </tr>
         </tbody>
     </table>
+    <div class="row">
+        <div class="col-md-4 text-center"></div>
+        <div class="col-md-4 text-center">
+            <a href="/home"><input class="btn btn-default" type="button" value="Back"/></a>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
