--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
@@ -14,25 +14,23 @@
           rel="stylesheet"/>
 </head>
 <body>
-<nav class ="navbar fixed-top navbar-light bg-faded">
-    <div class="navbar-brand"><form class="form-inline" action="#" th:action="@{/logout}" method="post"><div th:inLine="text">Hello, [[${#httpServletRequest.remoteUser}]]&nbsp;&nbsp;</div><a href="/"><input type="submit" value="Sign Out"/></a></form><a href="/history"><input type="button" value="History"/></a></div>
-</nav>
-<h1 class="text-center">Show me the weather in:</h1>
-<form action="#" th:action="@{/home}" method="post">
-    <div class="container mx-auto table-responsive" style="width: 500px;">
+<h1 class="text-center">My SkyCast Search History</h1>
+<div class="text-center">
+    <div class="container mx-auto">
         <table class="table table-bordered table-hover">
-            <tbody>
+            <thead>
             <tr>
-                <td>City / Address / Zip / Place</td>
-                <td><input type="text" class="form-control" name="query"/></td>
+                <th class="text-center">Search</th>
             </tr>
-            <tr>
-                <td colspan="2" class="text-center"><input class="btn btn-warning" type="submit" value="Search"/></td>
+            </thead>
+            <tbody>
+            <tr th:each="search : ${searchList}">
+                <td th:text="${search.searchQuery}"></td>
             </tr>
             </tbody>
         </table>
     </div>
-</form>
+</div>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
