--- a/src/main/resources/templates/resultError.html
+++ b/src/main/resources/templates/resultError.html
@@ -14,25 +14,9 @@
           rel="stylesheet"/>
 </head>
 <body>
-<nav class ="navbar fixed-top navbar-light bg-faded">
-    <div class="navbar-brand"><form class="form-inline" action="#" th:action="@{/logout}" method="post"><div th:inLine="text">Hello, [[${#httpServletRequest.remoteUser}]]&nbsp;&nbsp;</div><a href="/"><input type="submit" value="Sign Out"/></a></form><a href="/history"><input type="button" value="History"/></a></div>
-</nav>
-<h1 class="text-center">Show me the weather in:</h1>
-<form action="#" th:action="@{/home}" method="post">
-    <div class="container mx-auto table-responsive" style="width: 500px;">
-        <table class="table table-bordered table-hover">
-            <tbody>
-            <tr>
-                <td>City / Address / Zip / Place</td>
-                <td><input type="text" class="form-control" name="query"/></td>
-            </tr>
-            <tr>
-                <td colspan="2" class="text-center"><input class="btn btn-warning" type="submit" value="Search"/></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</form>
+<td colspan="3" class="text-center">
+    <h3>Search "<code th:text="${query}"></code>" returned 0 results</h3>
+</td>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
