--- a/src/main/resources/templates/resultDateError.html
+++ b/src/main/resources/templates/resultDateError.html
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-md-4 text-center"></div>
     <div class="col-md-4 text-center">
-        <h3>Search "<code th:text="${query}"></code>" returned 0 results</h3>
+        <h3>Search "<code th:text="${query}"></code>" and "<code th:text="${queryDate}"></code>" returned 0 results</h3>
         <a href="/home"><input class="btn btn-default" type="button" value="Back"/></a>
     </div>
 </div>
