--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 </nav>
 <h1 class="text-center">Show me the weather in:</h1>
 <form action="#" th:action="@{/result}" method="post">
-    <div class="container mx-auto table-responsive">
+    <div class="container mx-auto">
         <table class="table table-bordered table-hover">
             <tbody>
             <tr>
@@ -35,7 +35,7 @@
 </form>
 <h1 class="text-center">Show me the past/future weather in:</h1>
 <form action="#" th:action="@{/resultdate}" method="post">
-    <div class="container mx-auto table-responsive">
+    <div class="container mx-auto">
         <table class="table table-bordered table-hover">
             <tbody>
             <tr>
