--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -12,15 +12,41 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"
           rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
-<body>
-<h1 class="text-center">My SkyCast Search History</h1>
+<body style="padding:60px">
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar-header">
+        <p class="navbar-text" th:inline="text">Hello, [[${#httpServletRequest.remoteUser}]]</p>
+        <a href="/home">
+            <button type="button" class="btn btn-default navbar-btn">Home</button>
+        </a>
+        <a href="/history">
+            <button type="button" class="btn btn-default navbar-btn">History</button>
+        </a>
+        <form class="navbar-form navbar-right" action="#" th:action="@{/logout}" method="post">
+            <div class="form-group"></div>
+            <a href="/">
+                <button type="submit" class="btn btn-default">Logout</button>
+            </a>
+        </form>
+    </div>
+</nav>
+<h1 class="text-center">SkyCast Search History</h1>
 <div class="text-center">
     <div class="container mx-auto">
         <table class="table table-bordered table-hover">
             <thead>
             <tr>
-                <th class="text-center">Search</th>
+                <th class="text-center">Last 10 Searches</th>
             </tr>
             </thead>
             <tbody>
@@ -31,14 +57,5 @@
         </table>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
 </body>
 </html>
