--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -26,9 +26,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
-
 </head>
-<body>
+<body style="padding:60px">
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar-header">
+        <p class="navbar-text" th:inline="text">Hello, [[${#httpServletRequest.remoteUser}]]</p>
+        <a href="/home">
+            <button type="button" class="btn btn-default navbar-btn">Home</button>
+        </a>
+        <a href="/history">
+            <button type="button" class="btn btn-default navbar-btn">History</button>
+        </a>
+        <form class="navbar-form navbar-right" action="#" th:action="@{/logout}" method="post">
+            <div class="form-group"></div>
+            <a href="/">
+                <button type="submit" class="btn btn-default">Logout</button>
+            </a>
+        </form>
+    </div>
+</nav>
 <p><h1 class="text-center">Forecast for <code th:text="${query}"></code></h1></p>
 <div class="container mx-auto">
     <table class="table table-bordered table-hover">
@@ -48,8 +64,8 @@
         <thead>
         <tr>
             <th>Summary</th>
-            <th>Temperature</th>
-            <th>Apparent Temperature</th>
+            <th>Temperature (°F)</th>
+            <th>Apparent Temperature (°F)</th>
             <th>Humidity</th>
         </tr>
         </thead>
@@ -77,11 +93,11 @@
                 datasets: [{
                     label: 'Temperature Low',
                     data: ylo,
-                    backgroundColor: "#3e95cd"
+                    backgroundColor: "#7ACEEB"
                 }, {
                     label: 'Temperature High',
                     data: yhi,
-                    backgroundColor: "#8e5ea2"
+                    backgroundColor: "#fa8072"
                 }]
             },
             options: {
@@ -112,10 +128,10 @@
         <tr>
             <th>Time</th>
             <th>Summary</th>
-            <th>Temperature Low</th>
-            <th>Temperature High</th>
-            <th>Apparent Temperature Low</th>
-            <th>Apparent Temperature High</th>
+            <th>Temperature Low (°F)</th>
+            <th>Temperature High (°F)</th>
+            <th>Apparent Temperature Low (°F)</th>
+            <th>Apparent Temperature High (°F)</th>
             <th>Humidity</th>
         </tr>
         </thead>
