--- a/src/main/resources/templates/userSuccess.html
+++ b/src/main/resources/templates/userSuccess.html
@@ -26,7 +26,7 @@
 <div class="row">
     <div class="col-md-4 text-center"></div>
     <div class="col-md-4 text-center">
-        <h3>Welcome to SkyCast, the new way to read your local weather!</h3>
+        <h3>Successfully created SkyCast Account!</h3>
         <a href="/home"><input class="btn btn-default" type="button" value="Get Started!"/></a>
     </div>
 </div>
