--- a/src/main/resources/templates/resultDate.html
+++ b/src/main/resources/templates/resultDate.html
@@ -13,6 +13,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"
           rel="stylesheet"/>
     <link rel="stylesheet" href="chart.css"/>
+    <link rel="stylesheet" href="nav.css"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
@@ -31,15 +32,14 @@
 <body style="padding:60px">
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="navbar-header">
-        <p class="navbar-text" th:inline="text">Hello, [[${#httpServletRequest.remoteUser}]]</p>
+        <text class="navbar-text" th:inline="text">Hello, [[${#httpServletRequest.remoteUser}]]</text>
         <a href="/home">
             <button type="button" class="btn btn-default navbar-btn">Home</button>
         </a>
         <a href="/history">
             <button type="button" class="btn btn-default navbar-btn">History</button>
         </a>
-        <form class="navbar-form navbar-right" action="#" th:action="@{/logout}" method="post">
-            <div class="form-group"></div>
+        <form class="navbar-right mobileNav pull-right" action="#" th:action="@{/logout}" method="post">
             <a href="/">
                 <button type="submit" class="btn btn-default">Logout</button>
             </a>
